Colaboratory を使用して作成しました

--- a/kaggle02function.ipynb
+++ b/kaggle02function.ipynb
@@ -6,7 +6,7 @@
       "name": "kaggle02function.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNPCgR3vflSt91LacEO4bCd",
+      "authorship_tag": "ABX9TyOW4W5h/QXeJgerxHzEU1eU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -731,16 +731,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ad8NofC60rCN",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "M_5a-M3Xkv3d",
         "colab_type": "text"
       },
@@ -815,26 +805,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MYWWmwvi09mM",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Mm1Yw-0jx_nn",
         "colab_type": "text"
       },
       "source": [
         "## 問題 2. `round`の`ndigits`\n",
-        "`round`の2番目の引数`ndigits`は負の数でもかまわないとhelp()は言っています。\n",
         "\n",
-        "次のコードセルで実験して見て下さい。\n",
+        "`help()`によると`round`の2番目の引数`ndigits`は負の数でもかまわない。\n",
         "\n",
-        "どんなときに役に立ちますか？"
+        "次のコードセルで実験して見よう。"
       ]
     },
     {
@@ -868,21 +847,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GSlrkf4niwIw",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# floor()とかceiling()の関数はあるか実験 -> ない\n",
-        "# floor(3.14159)\n",
-        "# ceiling(3.14159)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "87kxY31hjarr",
@@ -891,9 +855,9 @@
       "source": [
         "## 問題 3. キャンディを分配した余りを算出する関数\n",
         "\n",
-        "アリスとボブとキャロルはキャンディを平等に分けて余りを潰してすてることにしました。91個ならば30個ずつとって、1個捨てます。\n",
+        "アリスとボブとキャロルはキャンディを平等に分けて余りを潰してすてることにした。91個ならば30個ずつとって、1個捨てる。\n",
         "\n",
-        "まずキャンディの数を引数として、捨てる余りの数を算出する簡単な関数をつくりました。\n",
+        "まずキャンディの数を引数として、捨てる余りの数を算出する簡単な関数を作った。\n",
         "\n",
         "これを修正して、3人でなく他の人数で分配して余りを算出プログラムにする。もし、2つ目の引数がなければ、3が使われる。\n",
         "\n",
@@ -986,11 +950,12 @@
       },
       "source": [
         "## 問題 4. エラーメッセージを読む\n",
-        "エラーメッセージを読むことは、Pythonの勉強になりますので、エラーがでたときは落ち込まずに逆にチャンスだと思ってがんばりましょう。\n",
         "\n",
-        "以下のコードセルでは始めにコメントとして書いてあるバギーなコードを、アンコメントし、実行することを繰り返しながらコードを完成させて下さい。\n",
+        "エラーメッセージを読むことは、Pythonの勉強になるので、エラーがでたときは落ち込まずに逆にチャンスだと思ってがんばろう。\n",
         "\n",
-        "ちなみに、`ctrl`+`/`で選択した行を交互にコメントアウト、アンコメントできます。\n"
+        "以下のコードセルでは始めにコメントとして書いてあるバギーなコードを、アンコメントし、実行することを繰り返しながらコードを完成させる。\n",
+        "\n",
+        "ちなみに、`ctrl`+`/`で選択した行を交互にコメントアウト、アンコメントできる。\n"
       ]
     },
     {
