--- a/mathwithpython01.ipynb
+++ b/mathwithpython01.ipynb
@@ -65,7 +65,27 @@
         "1. `Colab`でPythonで実験しながら読むことを想定したノートブックとする。\n",
         "1. 本家`SymPy Tutorial` (https://docs.sympy.org/latest/tutorial/index.html#tutorial)\n",
         "1. 入力例で学ぶPython(SymPy)の使い方(入門) (https://pianofisica.hatenablog.com/entry/2019/04/04/183712)\n",
-        "1. `Doing Math With Python` PDF (chrome-extension://oemmndcbldboiebfnladdacbdfmadadm/http://index-of.es/Varios-2/Doing%20Math%20with%20Python.pdf)"
+        "1. `Doing Math With Python` PDF ( http://index-of.es/Varios-2/Doing%20Math%20with%20Python.pdf)\n",
+        "1. `Doing Math With Python` site (http://www.nostarch.com/doingmathwithpython/ )"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7Qlur3MgJS2m",
+        "colab_type": "text"
+      },
+      "source": [
+        "# はじめに\n",
+        "\n",
+        "数学と言っても広い話で、調べながらいろんな話題に進んでしまうとは思うものの、とりあえず思いついたことを書いておくと、興味の対象がわかっていいと思うので書いておく。\n",
+        "\n",
+        "1. 数式。数学において数式を数学の世界で普通なように書くことは大事だと思う。$x^2$とかを`x**2`と書くとき、何が違うかというとフォントが違う、記号が違う。いまは$¥LaTeX$で書いたが、フォントと記号は満足させたが、こんどは記号の持つ意味合いから離れてしまっている。\n",
+        "1. 数式演算。$x$に数を代入することはプログラミングでできて、手続き的にいろいろ複雑な計算もできるが、数式を数式自体で操作して、概念を抽象化していかないとものが考えられない。この辺が`sympy`なのだろうが、どこまでできるのか。\n",
+        "1. 普通の四則演算。日常的に例えば、足し算をしたいとするとき、`sum([123, 456, 789])`と書くのだろうが、`numpy`とかを使えば、いろんなことが簡単に計算できるのか。\n",
+        "1. Colabではテキストセルでは$¥LaTeX$、コードセルでは`sympy`で書くという認識だが、セルコマンドの`%%latex`は使えるのか。\n",
+        "1. 図はどうするのか。`matplotlib`で描くのか。\n",
+        "\n"
       ]
     },
     {
@@ -78,8 +98,26 @@
         "# sympyとか\n",
         "\n",
         "どうやら、Pythonの数式処理ライブラリー`SymPy`が必要らしい。\n",
+        "どう導入するのか。  \n",
         "\n",
-        "数式はマークダウンで$\\LaTeX$(`MathJax`)で書くのもありだが、上記のサイト(https://pianofisica.hatenablog.com/entry/2019/04/04/183712) を参考に少し試して見よう。\n"
+        "\n",
+        "数式はマークダウンで$\\LaTeX$(`MathJax`)で書くのもありだが、参考に試して見よう。\n",
+        "\n",
+        "memo:  \n",
+        "doit()  \n",
+        "factor ()  \n",
+        "expand () \n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eyXnwcAeNzUg",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
