Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -77,6 +77,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "colab_type": "text",
+        "id": "i_Cod0PRbZRu"
+      },
+      "source": [
+        "# 数式記号一覧\n",
+        "\n",
+        "The Comprehensive LaTeX Symbol List - The CTAN archive ( http://tug.ctan.org/info/symbols/comprehensive/symbols-a4.pdf )\n",
+        "\n",
+        "Short Math Guide for LaTeX ( https://ftp.yz.yamagata-u.ac.jp/pub/CTAN/info/short-math-guide/short-math-guide.pdf )\n",
+        "\n",
+        "ギリシャ文字, ドイツ文字, 花文字, 筆記体の TeX 表記をまとめておいた ( https://phasetr.com/blog/2013/04/14/ギリシャ文字-ドイツ文字-筆記体の-tex-表記を/ )"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "dlP5VSVvbsxB",
         "colab_type": "text"
       },
@@ -260,7 +276,7 @@
         "\\mathfrak {abcdefABCDEF}\\\\\n",
         "\\mathit {abcdefABCDEF}\\\\"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -375,23 +391,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "z-64YVjBB0lU",
+        "id": "l0WOCX6ZbsFA",
         "colab_type": "text"
       },
       "source": [
-        "# 数式記号一覧\n",
+        "文章の中に数式が入るのは、`%%latex`でやるより、マークダウンで書いた方がよさそう。\n",
         "\n",
-        "ここに記号一覧みたいのを入れる。\n",
-        "\n",
-        "数式記号一覧 (PDF, 120K) [CTAN の symbols.tex を日本語にしたものです]  \n",
-        "もっと実例が豊富な解説をリンクしておきます（ただし英語）。  \n",
-        "\n",
-        "AMS-LaTeX (American Mathematical Society) : 特にこの中の Short Math Guide for LaTeX  \n",
-        "Higher Mathematics (LaTeX Companion の第8章; PDF 631K)  \n",
-        "Herbert Voss's Math mode (LaTeX や AMSmath の数式モード解説のほか，Part III には数式組版にかかわる TeX のプリミティブ小事典があります。)  \n",
-        "また，数式中でよく用いられるギリシャ文字・ドイツ文字・花文字・筆記体の出力法が以下にまとめられています。  \n",
-        "\n",
-        "ギリシャ文字, ドイツ文字, 花文字, 筆記体の TeX 表記をまとめておいた  "
+        "実対称行列 $A$ は直交行列 $P$ によって\n",
+        "$$\n",
+        "D = P^{-1} A P\n",
+        "$$\n",
+        "と対角行列 $D$ に対角化される。"
       ]
     },
     {
@@ -412,48 +422,12 @@
         "D = P^{-1} A P  \\\\\n",
         "と対角行列\\ D \\ に対角化される。"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/latex": "\n実対称行列\\ A \\ は直交行列 \\ P \\ によって  \\\\\nD = P^{-1} A P  \\\\\nと対角行列\\ D \\ に対角化される。",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2ShUNwXk_q-H",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 121
-        },
-        "outputId": "cdb8809e-bfac-4f84-ea40-f77c6b89f891"
-      },
-      "source": [
-        "%%latex\n",
-        "\n",
-        "実対称行列 $A$ は直交行列 $P$ によって\n",
-        "\n",
-        "D = P^{-1} A P\n",
-        "\n",
-        "と対角行列 $D$ に対角化される。\n"
-      ],
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "\n実対称行列 $A$ は直交行列 $P$ によって\n\nD = P^{-1} A P\n\nと対角行列 $D$ に対角化される。",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -471,7 +445,13 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "なぜなら、`%%latex`ではいまの私の知識では、\n",
+        "\n",
+        "1. 数式をセンタリングできない。\n",
+        "1. 改行が `\\\\` で、手間がかかる。\n",
+        "1. 日本語のフォントが変わってしまうのが困る。\n",
+        "\n",
+        "とか。"
       ]
     },
     {
@@ -482,96 +462,6 @@
       },
       "source": [
         "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Js94s7TEB0lW",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "TYQHM1ooB0lW",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4toDP7eNB0lX",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "oO7GQdXcB0lX",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OZPoXHAuB0lY",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "r4liDNw_B0lY",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "kJu9YIY_B0lZ",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "z6PutoucB0lZ",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Rp6blNK3B0lc",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
       ]
     }
   ]
