Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -71,7 +71,8 @@
         "1. 参考サイトを読むときに実験しながら進める。\n",
         "1. TeX入門 ( http://www.comp.tmu.ac.jp/tsakai/lectures/intro_tex.html )\n",
         "1. TeX入門Wiki ( https://texwiki.texjp.org/?LaTeX%E5%85%A5%E9%96%80%2F%E6%9C%80%E5%88%9D%E3%81%AE%E4%BE%8B )\n",
-        "1. Learn LaTeX in 30 minutes ( https://www.overleaf.com/learn/latex/Learn_LaTeX_in_30_minutes )"
+        "1. Learn LaTeX in 30 minutes ( https://www.overleaf.com/learn/latex/Learn_LaTeX_in_30_minutes )\n",
+        "1. MathJax ( https://docs.mathjax.org/en/v2.5-latest/tex.html )"
       ]
     },
     {
@@ -551,7 +552,7 @@
         "\\displaystyle\n",
         "\\sin x = \\sum_{n=0}^{\\infty} \\frac{(-1)^n}{(2n+1)!} x^{2n+1}"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -587,7 +588,7 @@
         "= \\lim_{\\epsilon \\to +0} [x \\log x - x]_{\\epsilon}^{1}\n",
         "= -1"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -623,7 +624,7 @@
         "= \\lim_{\\epsilon \\to +0} [x \\log x - x]_{\\epsilon}^{1} \\\\\n",
         "= -1\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -679,7 +680,7 @@
         "\\cos(\\alpha \\pm \\beta) = \\cos \\alpha \\cos \\beta \\mp \\sin \\alpha \\sin \\beta \\\\\n",
         "\\tan(\\alpha \\pm \\beta) = \\frac{\\tan \\alpha \\pm \\tan \\beta}{1 \\mp \\tan \\alpha \\tan \\beta}\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -734,7 +735,7 @@
         "\\| x \\| \\\\\n",
         "\\langle x \\rangle"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -766,7 +767,7 @@
         "\n",
         "\\Bigg( \\bigg[ \\Big\\{ \\big\\| \\langle x \\rangle \\big\\| \\Big\\} \\bigg] \\Bigg)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -811,7 +812,7 @@
         "\n",
         "\\left( \\frac{a}{b} \\right)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -826,6 +827,121 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QRIqtyYMZ_Sb",
+        "colab_type": "text"
+      },
+      "source": [
+        "左右のカッコに`\\left`、`\\right`をつけると自動で可変になる。\n",
+        "\n",
+        "`\\left`、`\\right`はかならずペアで、片方だけ使うときはピリオド `.` をつける。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UgkUWCtbabhj",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 49
+        },
+        "outputId": "8463a8b8-d2bc-4eb6-f4ff-6a19a3d97331"
+      },
+      "source": [
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\n",
+        "\\left\\{ \\frac{a}{b} \\right.\n",
+        "\n"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\\displaystyle\n\n\\left\\{ \\frac{a}{b} \\right.\n",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9333Vy-YhjAk",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 行列"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yBKZWWP0hlDW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 78
+        },
+        "outputId": "1336ade5-184a-4933-baad-3f1dcf8b7b9c"
+      },
+      "source": [
+        "%%latex\n",
+        "\n",
+        "\\begin{array}{lcr}\n",
+        "111 & 222 & 333 \\\\\n",
+        "44  & 55  & 66 \\\\\n",
+        "7   & 8   & 9\n",
+        "\\end{array}"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\n\\begin{array}{lcr}\n111 & 222 & 333 \\\\\n44  & 55  & 66 \\\\\n7   & 8   & 9\n\\end{array}",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FMCI0ibFhu4E",
+        "colab_type": "text"
+      },
+      "source": [
+        "ふむ。 `\\begin`、`\\end｀は何が使えて何がつかえないか。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s-_d6xQDh6BV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "%%latex??"
+      ],
+      "execution_count": 38,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
