Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -310,6 +310,9 @@
         "colab_type": "text"
       },
       "source": [
+        "### `LaTeX`のフォントについては別途見出しを設ける\n",
+        "\n",
+        "### 改行とスペース\n",
         "改行の入れ方がわからない。  => `latex`の中ではバックスラッシュ2個。\n",
         "\n",
         "スペースの入れ方はとりあえず、`\\` プラスカンマとかスペース。\n",
@@ -322,6 +325,8 @@
         "ちなみにバックスラッシュはマックでは`option+¥`。\n",
         "\n",
         "</br></br></br></br></br>\n",
+        "\n",
+        "### インテグラル\n",
         "$$\n",
         "\\frac{\\pi}{2} =\n",
         "\\left( \\int_{0}^{\\infty} \\frac{\\sin x}{\\sqrt{x}} dx \\right)^2 =\n",
@@ -384,7 +389,18 @@
         "colab_type": "text"
       },
       "source": [
-        "# カッコ\n",
+        "# カッコ\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "izyrEmSv6mIS",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "### 行列の失敗\n",
         "\n",
         "A =\\begin{pmatrix}\n",
         "        a_{11} & \\ldots & a_{1n} \\\\\n",
@@ -436,81 +452,13 @@
         "colab_type": "text"
       },
       "source": [
-        "文章の中に数式が入るのは、`%%latex`でやるより、マークダウンで書いた方がよさそう。\n",
+        "### 直交行列\n",
         "\n",
         "実対称行列 $A$ は直交行列 $P$ によって\n",
         "$$\n",
         "D = P^{-1} A P\n",
         "$$\n",
-        "と対角行列 $D$ に対角化される。"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yIK3j_X-ApgN",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 83
-        },
-        "outputId": "27967ae9-391f-4515-a2fc-6fb4ddfb1e72"
-      },
-      "source": [
-        "%%latex\n",
-        "\n",
-        "実対称行列\\ A \\ は直交行列 \\ P \\ によって  \\\\\n",
-        "D = P^{-1} A P  \\\\\n",
-        "と対角行列\\ D \\ に対角化される。"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/latex": "\n実対称行列\\ A \\ は直交行列 \\ P \\ によって  \\\\\nD = P^{-1} A P  \\\\\nと対角行列\\ D \\ に対角化される。",
-            "text/plain": [
-              "<IPython.core.display.Latex object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "w-cRW9IRB0lV",
-        "colab_type": "text"
-      },
-      "source": [
-        "なぜなら、`%%latex`ではいまの私の知識では、\n",
-        "\n",
-        "1. 数式をセンタリングできない。\n",
-        "1. 改行が `\\\\` で、手間がかかる。\n",
-        "1. 日本語のフォントが明朝体に変わってしまうのが美しくない。\n",
-        "\n",
-        "とか。\n",
-        "\n",
-        "</br>\n",
-        "</br>\n",
-        "</br>\n",
-        "</br>\n",
-        "\n",
-        "細かくコードセルとテキストセルを交えながら書くのがいいかもしれない。\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DJQHMpG-5nBI",
-        "colab_type": "text"
-      },
-      "source": [
-        "実対称行列 $A$ は直交行列 $P$ によって\n"
+        "と対角行列 $D$ に対角化される。\n"
       ]
     },
     {
@@ -547,11 +495,14 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-cGhYRjs54M4",
+        "id": "dhROzMML5hQI",
         "colab_type": "text"
       },
       "source": [
-        "と対角行列 $D$ に対角化される。"
+        "### シグマ\n",
+        "$$\n",
+        "\\sin x = \\sum_{n=0}^{\\infty} \\frac{(-1)^n}{(2n+1)!} x^{2n+1}\n",
+        "$$"
       ]
     },
     {
@@ -584,6 +535,23 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2KntNwKI62-c",
+        "colab_type": "text"
+      },
+      "source": [
+        "#### インテグラル\n",
+        "\n",
+        "$$\n",
+        "\\int_{0}^{1} \\log x \\,dx\n",
+        "= \\lim_{\\epsilon \\to +0} \\int_{\\epsilon}^{1} \\log x \\,dx\n",
+        "= \\lim_{\\epsilon \\to +0} [x \\log x - x]_{\\epsilon}^{1}\n",
+        "= -1\n",
+        "$$"
       ]
     },
     {
@@ -620,6 +588,21 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "THNLS9vf7EuJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "\\begin{eqnarray}\n",
+        "\\int_{0}^{1} \\log x dx\n",
+        "&=& \\lim_{\\epsilon \\to +0} \\int_{\\epsilon}^{1} \\log x dx \\\\\n",
+        "&=& \\lim_{\\epsilon \\to +0} [x \\log x - x]_{\\epsilon}^{1} \\\\\n",
+        "&=& -1\n",
+        "\\end{eqnarray}"
       ]
     },
     {
@@ -665,18 +648,25 @@
         "colab_type": "text"
       },
       "source": [
-        "むむぅ。 \n",
+        "`%%latex`の中では\n",
         "\n",
-        "\\begin{eqnarray}\n",
-        "\\int_{0}^{1} \\log x dx\n",
-        "&=& \\lim_{\\epsilon \\to +0} \\int_{\\epsilon}^{1} \\log x dx \\\\\n",
-        "&=& \\lim_{\\epsilon \\to +0} [x \\log x - x]_{\\epsilon}^{1} \\\\\n",
-        "&=& -1\n",
-        "\\end{eqnarray}\n",
-        "\n",
-        "と表示したかったのだが。  \n",
-        "\n",
-        "`&=&`が使えない。`begin`、`end`が使えない。たぶん。"
+        "`&=&`が使えない。`begin{eqnarray}`、`end{eqnarray}`が使えない。たぶん。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZGBMM_-F7WSs",
+        "colab_type": "text"
+      },
+      "source": [
+        "$$\n",
+        "\\begin{align}\n",
+        "\\sin(\\alpha \\pm \\beta) &= \\sin \\alpha \\cos \\beta \\pm \\cos \\alpha \\sin \\beta \\\\\n",
+        "\\cos(\\alpha \\pm \\beta) &= \\cos \\alpha \\cos \\beta \\mp \\sin \\alpha \\sin \\beta \\\\\n",
+        "\\tan(\\alpha \\pm \\beta) &= \\frac{\\tan \\alpha \\pm \\tan \\beta}{1 \\mp \\tan \\alpha \\tan \\beta}\n",
+        "\\end{align}\n",
+        "$$"
       ]
     },
     {
@@ -721,16 +711,12 @@
         "colab_type": "text"
       },
       "source": [
-        "これも、\n",
-        "\n",
-        "\\begin{align}\n",
-        "\\sin(\\alpha \\pm \\beta) &= \\sin \\alpha \\cos \\beta \\pm \\cos \\alpha \\sin \\beta \\\\\n",
-        "\\cos(\\alpha \\pm \\beta) &= \\cos \\alpha \\cos \\beta \\mp \\sin \\alpha \\sin \\beta \\\\\n",
-        "\\tan(\\alpha \\pm \\beta) &= \\frac{\\tan \\alpha \\pm \\tan \\beta}{1 \\mp \\tan \\alpha \\tan \\beta}\n",
-        "\\end{align}\n",
-        "\n",
-        "としたかったもの。\n",
-        "\n",
+        "$$\n",
+        "[ (x) ] \\\\\n",
+        "\\{ x \\}\\\\\n",
+        "\\| x \\| \\\\\n",
+        "\\langle x \\rangle\n",
+        "$$\n",
         "\n"
       ]
     },
@@ -770,6 +756,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WDpAvDmh7mms",
+        "colab_type": "text"
+      },
+      "source": [
+        "$$\n",
+        "\\Bigg( \\bigg[ \\Big\\{ \\big\\| \\langle x \\rangle \\big\\| \\Big\\} \\bigg] \\Bigg)\n",
+        "$$"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "xKyM3qnxWuEC",
@@ -804,13 +802,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hPqUVlhJUTf1",
+        "id": "wW5eQSHD7sLL",
         "colab_type": "text"
       },
       "source": [
         "$$\n",
-        "\\Bigg( \\bigg[ \\Big\\{ \\big\\| \\langle x \\rangle \\big\\| \\Big\\} \\bigg] \\Bigg)\n",
-        "$$"
+        "\\left( \\frac{a}{b} \\right)\n",
+        "$$\n",
+        "\n",
+        "</br>\n",
+        "</br>\n",
+        "</br>\n",
+        "</br>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "suZGBpjg72MT",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "左右のカッコに`\\left`、`\\right`をつけると自動で可変になる。\n",
+        "\n",
+        "`\\left`、`\\right`はかならずペアで、片方だけ使うときはピリオド `.` をつける。"
       ]
     },
     {
@@ -844,18 +860,6 @@
             "tags": []
           }
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "QRIqtyYMZ_Sb",
-        "colab_type": "text"
-      },
-      "source": [
-        "左右のカッコに`\\left`、`\\right`をつけると自動で可変になる。\n",
-        "\n",
-        "`\\left`、`\\right`はかならずペアで、片方だけ使うときはピリオド `.` をつける。"
       ]
     },
     {
@@ -936,16 +940,6 @@
             "tags": []
           }
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "FMCI0ibFhu4E",
-        "colab_type": "text"
-      },
-      "source": [
-        "ふむ。 `\\begin`、`\\end｀は何が使えて何がつかえないか。\n"
       ]
     },
     {
