--- a/mathwithpython01.ipynb
+++ b/mathwithpython01.ipynb
@@ -60,9 +60,8 @@
         "# メモ\n",
         "\n",
         "1. ハードディスクの中に`mathwithpython01.ipynb`というのがあったので、見ているところ。\n",
-        "1. `doing math with python`という本があってそれかもしれないが違っているだろう。\n",
-        "1. それ以外に参考になりそうなサイトはいろいろある。\n",
         "1. `Colab`でPythonで実験しながら読むことを想定したノートブックとする。\n",
+        "1. `sympy`、`LaTeX`、`%%latex`を使う。その意味では、このノートブックは`learninglatex.ipynb`の続編。\n",
         "1. 本家`SymPy Tutorial` (https://docs.sympy.org/latest/tutorial/index.html#tutorial)\n",
         "1. 入力例で学ぶPython(SymPy)の使い方(入門) (https://pianofisica.hatenablog.com/entry/2019/04/04/183712)\n",
         "1. `Doing Math With Python` PDF ( http://index-of.es/Varios-2/Doing%20Math%20with%20Python.pdf)\n",
@@ -102,12 +101,7 @@
         "\n",
         "\n",
         "数式はマークダウンで$\\LaTeX$(`MathJax`)で書くのもありだが、参考に試して見よう。\n",
-        "\n",
-        "memo:  \n",
-        "doit()  \n",
-        "factor ()  \n",
-        "expand () \n",
-        "\n"
+        "</br></br></br>\n"
       ]
     },
     {
@@ -199,7 +193,7 @@
         "\n",
         "\\int{e^x \\cos (x)}dx = \\frac{e^x}{2} \\sin(x) +  \\frac{e^x}{2} \\cos(x)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -241,7 +235,7 @@
         "x = symbols('x')\n",
         "help(x.doit)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +277,7 @@
         "x = symbols('x')\n",
         "x.doit?"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
