Colaboratory を使用して作成しました

--- a/mathwithpython02.ipynb
+++ b/mathwithpython02.ipynb
@@ -552,7 +552,7 @@
       "source": [
         "integrate(cos(x),x)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,7 +584,7 @@
       "source": [
         "Integral(cos(x),(x,0,oo))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +620,7 @@
       "source": [
         "integrate(cos(x),(x,0,oo))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -652,7 +652,7 @@
       "source": [
         "integrate(exp(-x),(x,0,oo))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -684,7 +684,7 @@
       "source": [
         "Integral(exp(-x**2 -y**2),(x, -oo, oo), (y,-oo,oo))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -722,7 +722,7 @@
       "source": [
         "integrate(exp(-x**2 - y**2), (x, -oo, oo), (y, -oo, oo))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -756,7 +756,7 @@
         "print(expr)\n",
         "display(expr)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -781,16 +781,6 @@
             "tags": []
           }
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "I4ycspQ5aOGh",
-        "colab_type": "text"
-      },
-      "source": [
-        "# いまここ"
       ]
     },
     {
@@ -1125,7 +1115,7 @@
         "\n",
         "\\lim_{x \\to x_0} f (x)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1156,7 +1146,7 @@
         "\n",
         "Limit(sin(x)/x, x, 0)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1219,7 +1209,7 @@
         "expr = x**2/exp(x)\n",
         "expr.subs(x,oo)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1406,6 +1396,10 @@
         "\n",
         "asymptotic series -> 漸近数列\n",
         "\n",
+        "`SymPy`はある点における関数の漸近数列を計算できる。\n",
+        "\n",
+        "点`x=x0`の近辺でタームズ・オブ・オーダーを `xn`とする関数 `f(x)` について、`f(x).serries(x, x0, n)` を使う。 `x0` と `n` は省略可能で、その場合 `x0=0`、 `n=6` が使われる。\n",
+        "\n",
         "SymPy can compute asymptotic series expansions of functions around a point. To compute the expansion of f(x) around the point x=x0 terms of order xn, use f(x).series(x, x0, n). x0 and n can be omitted, in which case the defaults x0=0 and n=6 will be used."
       ]
     },
@@ -1450,6 +1444,12 @@
       },
       "source": [
         "#  Landau order ランダウ・オーダー\n",
+        "\n",
+        "終点における $ O(x^4) $ タームは $x=0$ におけるランダウ・ターム・オーダーをあらwしている。コンピューターサイエンスにおけるビッグオー記法と一緒にしてはいけない。ビッグオーは一般的に `x=∞` におけるランダウ・ターム・オーダーを表す。  \n",
+        " $ O(x^4) $ タームは `x4` もしくはそれ以上の冪乗の `x` タームは無視するという意味で、オーダー・タームは数列の外で作られ、操作される。高次のタームは自動的に吸収される。\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "The $ O(x^4) $ term at the end represents the Landau order term at $x=0$ (not to be confused with big O notation used in computer science, which generally represents the Landau order term at x=∞). It means that all x terms with power greater than or equal to x4 are omitted. Order terms can be created and manipulated outside of series. They automatically absorb higher order terms.\n"
       ]
@@ -1552,7 +1552,9 @@
         "colab_type": "text"
       },
       "source": [
-        "###### The O notation supports arbitrary limit points (other than 0):"
+        "### オー記法は、ゼロ以外の任意の極限点をサポートする\n",
+        "\n",
+        "The O notation supports arbitrary limit points (other than 0):"
       ]
     },
     {
@@ -1594,7 +1596,15 @@
         "colab_type": "text"
       },
       "source": [
-        "###### Finite differences\n",
+        "# Finite differences 有限差分\n",
+        "\n",
+        "以上見てきたのは解析微分 `analytic derivative` と原始関数 `primitive function` であったが、閉鎖的な表現を持たない曲線の微分をしたいときにはどうするか。また、そもそも関数的な値を持っていない場合はどうするか。\n",
+        "\n",
+        "そういう場合のアプローチのひとつが有限差分アプローチである。\n",
+        "\n",
+        "もっｔも単純なやり方だと、\n",
+        "\n",
+        "\n",
         "o far we have looked at expressions with analytic derivatives and primitive functions respectively. But what if we want to have an expression to estimate a derivative of a curve for which we lack a closed form representation, or for which we don’t know the functional values for yet. One approach would be to use a finite difference approach.\n",
         "\n",
         "The simplest way the differentiate using finite differences is to use the differentiate_finite function:"
