--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb のコピー",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM6UhF8VXuLasWAk3QUABlf",
+      "authorship_tag": "ABX9TyNqRoieLxbT4a21RcwIx9Ln",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1279,7 +1279,7 @@
         "print (is_factor(4, 1024))\n",
         "print (1024 % 4 == 0)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1316,7 +1316,7 @@
         "for i in range (1, 4):\n",
         "    print (i)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1344,7 +1344,7 @@
         "for i in range (1, 10, 2):\n",
         "    print (i)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1379,7 +1379,7 @@
         "\n",
         "factors (25)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1411,7 +1411,7 @@
         "\n",
         "print('At the grocery store, I bought some {2} and {2} and {1}'.format(item1, item2, item3))"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1436,7 +1436,7 @@
       "source": [
         "print('Number 1: {0} Number 2: {1} '.format(1, 3.578))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1461,6 +1461,224 @@
       "cell_type": "code",
       "metadata": {
         "id": "omgzGTG0WcQP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        },
+        "outputId": "2ade5afc-a302-4e77-f721-3f1cb0b32f81"
+      },
+      "source": [
+        "# multiplication table printer\n",
+        "def multi_table(a):\n",
+        "    for i in range(1, 11):\n",
+        "        print('{0} x {1} = {2}'.format(a, i, a*i))\n",
+        "\n",
+        "a = 5\n",
+        "multi_table(float(a))"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5.0 x 1 = 5.0\n",
+            "5.0 x 2 = 10.0\n",
+            "5.0 x 3 = 15.0\n",
+            "5.0 x 4 = 20.0\n",
+            "5.0 x 5 = 25.0\n",
+            "5.0 x 6 = 30.0\n",
+            "5.0 x 7 = 35.0\n",
+            "5.0 x 8 = 40.0\n",
+            "5.0 x 9 = 45.0\n",
+            "5.0 x 10 = 50.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s0KsvnItU_BA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        },
+        "outputId": "56f93b10-ac3a-4c3b-b918-7b91a5596207"
+      },
+      "source": [
+        "print ('{0:.2f}'.format(1.25456))\n",
+        "print ('{0:.2f}'.format(1.2555))\n",
+        "print ('{0:.2f}'.format(1))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.25\n",
+            "1.26\n",
+            "1.00\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yMCqOQzZVlZ0",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 測定単位変換 converting units of measurement\n",
+        "\n",
+        "長さ、時間、質量、温度の国際的な測定単位は、メートル、秒、キログラム、およびケルビンと定められている。\n",
+        "\n",
+        "しかし!!!!\n",
+        "\n",
+        "例えば音頭は 303.15 ケルビンと言わず、華氏 86 度とか、摂氏 30 度とか言う。比較のためには測定単位を同じにする変換を行わなければならない。\n",
+        "\n",
+        "まず、長さのインチとマイルの変換のプログラムを作ろう。\n",
+        "\n",
+        "1 インチは 2.54 センチメートル。100 で割ればメートルになる。\n",
+        "\n",
+        "例えば 25.5 インチは\n",
+        "\n",
+        "(25.5 * 2.54) / 100\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zi5hA5mSX0JX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b672a910-a8d9-4dce-e5d6-777e032d4883"
+      },
+      "source": [
+        "(25.5 * 2.54) / 100"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6476999999999999"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aDsrWkX2X34V",
+        "colab_type": "text"
+      },
+      "source": [
+        "で、0.6476999999999999 メートルである。\n",
+        "\n",
+        "1 マイルは 1.609 キロメートルなので、目的地が 650 マイル先ならば\n",
+        "\n",
+        "650 * 1.609 "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VF0zjkvaYLib",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4fd040ec-6a8d-42b1-d001-42a7f901ba86"
+      },
+      "source": [
+        "650 * 1.609 "
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1045.85"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zEsJKckAYNpL",
+        "colab_type": "text"
+      },
+      "source": [
+        "で 1045.85 キロメートルであることがわかる。\n",
+        "\n",
+        "さて、温度は、次の式で表される。\n",
+        "\n",
+        "$$\n",
+        "C = (F - 32) \\times \\frac{5}{9}\n",
+        "$$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L0yfwPvpZBSK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "f185bdbf-ab5b-4578-f2e7-d3486347f250"
+      },
+      "source": [
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\n",
+        "C = (F - 32) \\times \\frac{5}{9}"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\\displaystyle\n\nC = (F - 32) \\times \\frac{5}{9}",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dqLQSvmKZ0oW",
         "colab_type": "code",
         "colab": {}
       },
