--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb のコピー",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNqRoieLxbT4a21RcwIx9Ln",
+      "authorship_tag": "ABX9TyP/LxUcLcI4r5u6k7VKhu6G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,8 @@
       "source": [
         "# メモ\n",
         "\n",
-        "> Doing Math with Python: Use Programming to Explore Algebra, Statistics, Calculus, and More! Amit Saha\n",
+        "> Doing Math with Python: Use Programming to Explore Algebra, Statistics, Calculus, and More!  \n",
+        "> Amit Saha\n",
         "\n",
         "を `Colab` でなぞりながら読む。\n",
         "\n",
@@ -1477,7 +1478,7 @@
         "a = 5\n",
         "multi_table(float(a))"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1513,7 +1514,7 @@
         "print ('{0:.2f}'.format(1.2555))\n",
         "print ('{0:.2f}'.format(1))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1566,7 +1567,7 @@
       "source": [
         "(25.5 * 2.54) / 100"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1610,7 +1611,7 @@
       "source": [
         "650 * 1.609 "
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1659,7 +1660,7 @@
         "\n",
         "C = (F - 32) \\times \\frac{5}{9}"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1676,17 +1677,349 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-YVESXHg2LaR",
+        "colab_type": "text"
+      },
+      "source": [
+        "ここで `F` は華氏、`C` は摂氏である。  \n",
+        "\n",
+        "華氏で98.6度はヒトの平均体温と言われるがこれを摂氏では何度か。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "dqLQSvmKZ0oW",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9c4deff1-ec5d-4a0d-9cf5-8592a0c31012"
       },
       "source": [
-        ""
+        "F = 98.6\n",
+        "\n",
+        "(F - 32) * 5 / 9"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "37.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pdJczQY-2pf1",
+        "colab_type": "text"
+      },
+      "source": [
+        "まず、変数 `F` を作り98.6度を代入する。\n",
+        "\n",
+        "次に摂氏に変換する数式を評価する。\n",
+        "\n",
+        "逆もやってみよう。摂氏から華氏への変換である。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sw_Ml0Qv2_fw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "67f02c21-738f-4b39-9910-6d2b42e8624a"
+      },
+      "source": [
+        "C = 37\n",
+        "C * (9 / 5) + 32"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "98.60000000000001"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dVmn_xsI3HNU",
+        "colab_type": "text"
+      },
+      "source": [
+        "単位変換プログラムをつくる。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pkdaIR7j3kGo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "cacf7c51-f093-4c1e-940c-df972cf4d215"
+      },
+      "source": [
+        "def km_miles(km):\n",
+        "    miles = km / 1.609\n",
+        "    return miles\n",
+        "\n",
+        "def miles_km(miles):\n",
+        "    km = miles * 1.609\n",
+        "    return km\n",
+        "\n",
+        "miles = 650\n",
+        "print (miles_km(miles))\n",
+        "\n",
+        "km = 1000\n",
+        "print (km_miles(km))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1045.85\n",
+            "621.5040397762585\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LaaLULOh5USi",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 二次方程式の根をみつける quadratic equation\n",
+        "\n",
+        "二次方程式は一般に次の形で表される。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z6LwvBMF6Imn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "outputId": "665c4503-084f-4445-a0b4-8e3d4b1c32ed"
+      },
+      "source": [
+        "%%latex\n",
+        "\n",
+        "a x^2 + bx + c = 0"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\na x^2 + bx + c = 0",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZhfdunLN6jZS",
+        "colab_type": "text"
+      },
+      "source": [
+        "二次方程式の根の公式は次のようなものである。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RZ5fip9Y6vj_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 56
+        },
+        "outputId": "a7931306-0ce0-4f34-cdfe-063ddac297bb"
+      },
+      "source": [
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\n",
+        "x = \\frac {- b \\pm \\sqrt{b^2 - 4ac}} {2a}"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\\displaystyle\n\nx_1 = \\frac {- b \\pm \\sqrt{b^2 - 4ac}} {2a}",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RCFVs3m87MF5",
+        "colab_type": "text"
+      },
+      "source": [
+        "二次方程式は一般に2個の根を持つ。どちらの解も元の二次方程式を満足させる。\n",
+        "\n",
+        "2つの根が同一の場合もある。\n",
+        "\n",
+        "定数部分、`a`、`b`、`c`を引数として解を計算するプログラムを作る。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pnNx_lc18w6a",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "e93bc92f-50f5-4e77-ff79-c6a8b83525d6"
+      },
+      "source": [
+        "def roots(a, b, c):\n",
+        "    '''Quadratic equation root calculator\n",
+        "    '''\n",
+        "    D = (b*b - 4*a*c)**0.5\n",
+        "    x_1 = (-b + D) / (2 * a)\n",
+        "    x_2 = (-b - D) / (2 * a)\n",
+        "\n",
+        "    return (x_1, x_2)\n",
+        "\n",
+        "a, b, c = 1, 2, 1\n",
+        "\n",
+        "solvedroot = roots(a, b, c)\n",
+        "\n",
+        "print ('x1: {}'.format(solvedroot[0]))\n",
+        "print ('x2: {}'.format(solvedroot[1]))\n"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "x1: -1.0\n",
+            "x2: -1.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7BiU9nPS-6La",
+        "colab_type": "text"
+      },
+      "source": [
+        "複素数 `complex number` が根となる場合がある。\n",
+        "</br></br>\n",
+        "$$\n",
+        "x^2 + x + 1 = 0\n",
+        "$$\n",
+        "\n",
+        "の場合でやってみる。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ONidVnbh-bG9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "6e4e840f-ce22-48eb-8470-f81d1e84c58c"
+      },
+      "source": [
+        "a, b, c = 1, 1, 1\n",
+        "\n",
+        "solvedroot = roots(a, b, c)\n",
+        "\n",
+        "print ('x1: {}'.format(solvedroot[0]))\n",
+        "print ('x2: {}'.format(solvedroot[1]))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "x1: (-0.49999999999999994+0.8660254037844386j)\n",
+            "x2: (-0.5-0.8660254037844386j)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gZ2NE_dv_JiB",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 問題 1. even_odd \n",
+        "\n",
+        "与えられた数が偶数か奇数かと、それぞれの場合について、続く9つの偶数または奇数の数列を返す。\n",
+        "\n",
+        "input: 2\n",
+        "output: even 2 4 6 8 10 12 14 16 18 20\n",
+        "\n",
+        "input: 1\n",
+        "output: odd 1 3 5 7 9 11 13 15 17 19\n",
+        "\n",
+        "浮動小数点数の場合、is_integer() メソッドでエラーメッセージを出すこと。"
+      ]
     }
   ]
 }
