Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb のコピー",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP/LxUcLcI4r5u6k7VKhu6G",
+      "authorship_tag": "ABX9TyPlbhLYv5FUFHB/GEagisD1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -480,14 +480,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c96a9607-2a44-461b-a813-a8cb4f75717d"
+        "outputId": "b5002d60-da88-476a-9019-d9c75bb8bb61"
       },
       "source": [
         "from fractions import Fraction\n",
         "f = Fraction (3, 4)\n",
         "f"
       ],
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -499,7 +499,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 69
         }
       ]
     },
@@ -1704,7 +1704,7 @@
         "\n",
         "(F - 32) * 5 / 9"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1749,7 +1749,7 @@
         "C = 37\n",
         "C * (9 / 5) + 32"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1801,7 +1801,7 @@
         "km = 1000\n",
         "print (km_miles(km))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1841,7 +1841,7 @@
         "\n",
         "a x^2 + bx + c = 0"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1884,7 +1884,7 @@
         "\n",
         "x = \\frac {- b \\pm \\sqrt{b^2 - 4ac}} {2a}"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1942,7 +1942,7 @@
         "print ('x1: {}'.format(solvedroot[0]))\n",
         "print ('x2: {}'.format(solvedroot[1]))\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1989,7 +1989,7 @@
         "print ('x1: {}'.format(solvedroot[0]))\n",
         "print ('x2: {}'.format(solvedroot[1]))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2019,6 +2019,283 @@
         "output: odd 1 3 5 7 9 11 13 15 17 19\n",
         "\n",
         "浮動小数点数の場合、is_integer() メソッドでエラーメッセージを出すこと。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DwIhpwBOBGmR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 134
+        },
+        "outputId": "8d590a1e-1bf7-4115-9bc0-2e225fba5650"
+      },
+      "source": [
+        "def even_odd_vending (num):\n",
+        "    if (num % 2) == 0:\n",
+        "        return ['even'] + [(x+num) for x in range(0,20,2)]\n",
+        "    else :\n",
+        "        return ['odd']  + [(x+num) for x in range(0,20,2)]\n",
+        "\n",
+        "\n",
+        "def even_odd(num):\n",
+        "    try:\n",
+        "        if float(num).is_integer():\n",
+        "            return (even_odd_vending(int(num)))\n",
+        "        else:\n",
+        "            return \"eerrroor\"\n",
+        "    except ValueError:\n",
+        "        return ('num is invalid')\n",
+        "\n",
+        "print(even_odd_vending(2))\n",
+        "print(even_odd_vending(1))\n",
+        "\n",
+        "print (even_odd(1))\n",
+        "print (even_odd(2))\n",
+        "print (even_odd(2.5))\n",
+        "print (even_odd(2.0))\n",
+        "print (even_odd(\"two\"))\n"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['even', 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n",
+            "['odd', 1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
+            "['odd', 1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
+            "['even', 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n",
+            "eerrroor\n",
+            "['even', 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n",
+            "num is invalid\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5K3BkCU-NsGQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 問題 2. 掛け算表の拡張\n",
+        "\n",
+        "掛け算表を拡張して、2つの引数をとり、最初の数 * 0,1, ..., 次の引数までの表とする。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "wJjE9baHO7B2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 269
+        },
+        "outputId": "8cffa936-60ce-4da0-dafa-a829e97b8524"
+      },
+      "source": [
+        "# enhanced multiplication table printer \n",
+        "def multi_table(a, b):\n",
+        "    for i in range(1, b+1):\n",
+        "        print('{0} x {1} = {2}'.format(a, i, a*i))\n",
+        "\n",
+        "a = 5\n",
+        "b = 15\n",
+        "multi_table(a, b)"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5 x 1 = 5\n",
+            "5 x 2 = 10\n",
+            "5 x 3 = 15\n",
+            "5 x 4 = 20\n",
+            "5 x 5 = 25\n",
+            "5 x 6 = 30\n",
+            "5 x 7 = 35\n",
+            "5 x 8 = 40\n",
+            "5 x 9 = 45\n",
+            "5 x 10 = 50\n",
+            "5 x 11 = 55\n",
+            "5 x 12 = 60\n",
+            "5 x 13 = 65\n",
+            "5 x 14 = 70\n",
+            "5 x 15 = 75\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iUj8gkElPgHx",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 問題 3. キログラムとポンドの重量単位変換プログラム\n",
+        "\n",
+        "1 ポンドは 0.453592キログラム\n",
+        " "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AlWO745KQCN1",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "49385789-1d52-4d8f-9cfd-03fa8b8a7a12"
+      },
+      "source": [
+        "def pound_kg(pound) :\n",
+        "    return pound * 0.453592\n",
+        "\n",
+        "def kg_pound(kg):\n",
+        "    return kg / 0.453592\n",
+        "\n",
+        "print (pound_kg(1))\n",
+        "print (f\"{kg_pound(1):.7}\")"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.453592\n",
+            "2.204624\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b1S30FviQ_Is",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 問題 4. 分数計算機"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vNbxtst7Rgfw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b83be764-85d0-475d-9fa7-e821211faa03"
+      },
+      "source": [
+        "from fractions import Fraction\n",
+        "Fraction (3, 4) + Fraction(2, 3)"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Fraction(17, 12)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JKqwXEvYSVwf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        },
+        "outputId": "ebcc03ac-cabe-4ed4-baa4-7b459e8d1e71"
+      },
+      "source": [
+        "print (Fraction(8,2))\n",
+        "print (Fraction (3, 4) + Fraction(2, 3))\n",
+        "print (Fraction (3, 4) - Fraction(2, 3))\n",
+        "print (Fraction (3, 4) * Fraction(2, 3))\n",
+        "print (Fraction (3, 4) / Fraction(2, 3))"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n",
+            "17/12\n",
+            "1/12\n",
+            "1/2\n",
+            "9/8\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0BdBEwZtS6pw",
+        "colab_type": "text"
+      },
+      "source": [
+        "# グラフでのデータの視覚化\n",
+        "\n",
+        "* 数直線とデカルト平面\n",
+        "* プロットライブラリmatplotlib\n",
+        "* グラフ\n",
+        "* ニュートンの重力法則と発射体軌跡\n",
+        "\n",
+        "を学ぶ。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9DbS4cH3YOcs",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 数直線\n",
+        "\n",
+        "数直線をmatplotlibで描きたい。\n",
+        "\n",
+        "SVGならいまでも描けるか。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NFBrm3giYW20",
+        "colab_type": "text"
+      },
+      "source": [
+        "# デカルト平面を理解する\n",
+        "\n",
+        "数直線は直感的にいくつかの性質を表している。たとえば、ゼロの右側はすべて正で、左側は負であること。数字 $a$ が数字 $b$ の右側にあればかならず $a$ が $b$ より大きく、$b$ は $a$ より小さい。両端の矢印は数直線が永遠に続き、線上のすべての点はどこまで行っても実数を表している。数字は1つで線上の1点に対応する。\n",
+        "\n",
+        "次の図では数直線がそれぞれの 0点で交差している。これをデカルト平面もしくはx-y平面と呼び、水平の数直線をx軸、垂直の数直線をy軸と呼ぶ。"
       ]
     }
   ]
