--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb のコピー",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPlbhLYv5FUFHB/GEagisD1",
+      "authorship_tag": "ABX9TyPGb6ouxBtHcIoHiTNk27VQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -487,7 +487,7 @@
         "f = Fraction (3, 4)\n",
         "f"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2058,7 +2058,7 @@
         "print (even_odd(2.0))\n",
         "print (even_odd(\"two\"))\n"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2108,7 +2108,7 @@
         "b = 15\n",
         "multi_table(a, b)"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2167,7 +2167,7 @@
         "print (pound_kg(1))\n",
         "print (f\"{kg_pound(1):.7}\")"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2204,7 +2204,7 @@
         "from fractions import Fraction\n",
         "Fraction (3, 4) + Fraction(2, 3)"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2238,7 +2238,7 @@
         "print (Fraction (3, 4) * Fraction(2, 3))\n",
         "print (Fraction (3, 4) / Fraction(2, 3))"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2296,6 +2296,126 @@
         "数直線は直感的にいくつかの性質を表している。たとえば、ゼロの右側はすべて正で、左側は負であること。数字 $a$ が数字 $b$ の右側にあればかならず $a$ が $b$ より大きく、$b$ は $a$ より小さい。両端の矢印は数直線が永遠に続き、線上のすべての点はどこまで行っても実数を表している。数字は1つで線上の1点に対応する。\n",
         "\n",
         "次の図では数直線がそれぞれの 0点で交差している。これをデカルト平面もしくはx-y平面と呼び、水平の数直線をx軸、垂直の数直線をy軸と呼ぶ。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p1T20lMwkBi1",
+        "colab_type": "text"
+      },
+      "source": [
+        "デカルト平面では1つの数値ではなく、2つの数値で点を表す。\n",
+        "記述します。図の点Aを2つの数値x、yで表し、（x、y）と書き、点の座標 `coordinates`と呼ぶ。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "98FwM9_1kyow",
+        "colab_type": "text"
+      },
+      "source": [
+        "### リストとタプル\n",
+        "\n",
+        "Pythonでリストとタプルはリストがイミュータブルでなく、変えられるのに対し、タプルはイミュータブルで変えられない、という違いがある。\n",
+        "\n",
+        "このテキストではx座標、y座標を表すのにリストを使う。タプルはグラフの`range`をカスタマイズする際に登場する。\n",
+        "\n",
+        "リストは鈎括弧`brackets`で作ることができる。要素はカンマで区切る。\n",
+        "\n",
+        "要素はインデクスでアクセスする。インデクスは0ベースである。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6hdLTmZAl1Q-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "f7bcfcfc-5235-44af-d607-cd3c4cb60d5b"
+      },
+      "source": [
+        "simplelist = [1, 2, 3]\n",
+        "print (simplelist)\n",
+        "print (simplelist[0])\n",
+        "print (simplelist[1])\n",
+        "print (simplelist[2])"
+      ],
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3]\n",
+            "1\n",
+            "2\n",
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qFs997ovmWQR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "58e59a67-b35c-442c-bc5a-526f4e24bd3c"
+      },
+      "source": [
+        "stringlist = ['a string','b string','c string']\n",
+        "emptylist = []\n",
+        "print (stringlist[1])\n",
+        "print (emptylist)"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "b string\n",
+            "[]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Vh-ZuCgUmrNi",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3680871f-1a00-4711-de0d-56c945c0efc7"
+      },
+      "source": [
+        "emptylist = []\n",
+        "emptylist.append(1)\n",
+        "emptylist.append(\"two\")\n",
+        "emptylist = emptylist + [3, 4]\n",
+        "print (emptylist)"
+      ],
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 'two', 3, 4]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
