Colaboratory を使用して作成しました

--- a/svg01.ipynb
+++ b/svg01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "svg01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOV+VX/Nt8C7SUdTcU4yoZB",
+      "authorship_tag": "ABX9TyMm+4le/oCjp4eTaEolyFFZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,9 +33,11 @@
       "source": [
         "# メモ\n",
         "\n",
-        "1. svgで数直線とか、ただの三角とか描く。matplotlibで描けるかと思ったのだが、matplotlibはそれ向きではなさそう。\n",
+        "1. svgで数直線とか、ただの三角とか描きたい。matplotlibで描けるかと思ったのだが、matplotlibはそれ向きではなさそう。\n",
         "1. `%%svg` をこれまでのマニュアルから探そう。=> なかった。Render SVG literal だけ。\n",
-        "1. SVG 図形描画とかで探してとりあえずやたら貼りつけよう。"
+        "1. SVG 図形描画とかで探してとりあえずやたら貼りつけよう。=> `colab`では図形が出力されているのに、githubに行くと壊れている。大丈夫だろうか。\n",
+        "1. svg tutorial みたいのが確かあったよね。それをやりたいね。\n",
+        "1. inkscapeかaffinity designerで描いて貼り付けるのもやりたい。"
       ]
     },
     {
@@ -1301,7 +1303,7 @@
         "  </g>\n",
         "</svg>\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
